# apdpp

./: .gitignore  CMakeLists.txt  CONFIG.txt  README.md  WORKLIST.md
bitop/: CMakeLists.txt
bitop/src/: bitop.cc
bsp_analysis/src/: bsp_analysis.cc  database_writer.h  lwpass.cc  lwpass.h
bsp_transform/src/: bsp_transform.cc  offsetter.cc  offsetter.h  pattern.cc  pattern.h  promoter.cc  promoter.h  propagator.cc  propagator.h
dashdb/inc/: dashdb.h
driver/: alleycatcc.py  config2source.sh  dashdb2source.sh
host_transform/src/: base_transformer.h  function_adder.h  host_transform.cc  ins_rt_decls.cc  ins_rt_decls.h  keepArgFunc_transformer.h
measurements/mat_mult/: benchmark.sh  make_csv.sh  victoria_mat_mul_2016-08-03.csv
measurements/mat_mult/python/: data-2016-01-12.csv  data-2016-01-13.csv  plot.ipynb
measurements/n_body/: benchmark.sh  creek_n_body_T1_2016-08-04.csv  creek_n_body_T1_fnopu_2016-08-16.csv  homepc_n_body_T1_fnopu_2016-08-17.csv  make_csv.sh  start_multi_gpu_computation.sh  start_single_gpu_computation.sh  victoria_n_body_2016-07-22.csv  victoria_n_body_2016-08-20.csv  victoria_n_body_T1_2016-08-03.csv  victoria_n_body_small_2016-08-26.csv  victoria_n_body_small_fnpu_2016-08-29.csv
measurements/n_body/python/: analysis_n_body.ipynb
measurements/part_overh/: README.txt  benchmark_mult_stencil.sh  data-2016-03-07.csv  data-2016-03-08.csv  make_csv.sh
measurements/part_overh/python/: plot.ipynb
measurements/stencil1D/2016-07-12/: make_csv.sh  victoria_1D_stencil_2016-07-12.csv
measurements/stencil1D/2016-beginning/: benchmark.sh  data-2016-02-03.csv  data-2016-03-30.csv  link_on_victoria.sh  make_csv.sh
measurements/stencil1D/2016-beginning/python/: plot.ipynb
measurements/stencil2D/: benchmark.sh  dep_resolution_creation.md  make_csv.sh  victoria_2D_stencil25p_2016-09-19.csv  victoria_2D_stencil5p_domlib_2016-09-20.csv  victoria_2D_stencil_2016-07-07.csv  victoria_2D_stencil_2016-07-14.csv
measurements/stencil2D/python/: analysis_2D_stencil.ipynb
runtime/: CMakeLists.txt
runtime/src/: access_function.cc  access_function.h  alias_handle.cc  alias_handle.h  argument.cc  argument.h  argument_access.cc  argument_access.h  argument_type.cc  argument_type.h  dependency_resolution.cc  dependency_resolution.h  kernel_info.cc  kernel_info.h  kernel_launch.cc  kernel_launch.h  log_statistics.cc  log_statistics.h  mekong-cuda.cc  mekong-cuda.h  mekong-wrapping.cc  mekong-wrapping.h  memory_copy.cc  memory_copy.h  partition.cc  partition.h  partitioning.cc  partitioning.h  virtual_buffer.cc  virtual_buffer.h
runtime/src/test/: mekong-test-accfunc.cc  mekong-test-depres.cc  mekong-test-kernellaunch.cc  mekong-test.cc  test_kernellaunch.cc  test_partition.cc
samples/mat_mult/: Makefile
samples/n_body/: Makefile
samples/reduction/src/: test_device.cl
samples/stencil1D/src/: test_device.cl  test_host.cc
samples/stencil2D/python/: grid.txt  show_grid.py
samples/stencil2D/src/: test_host.cc
sh/: bsp_analysis.sh  bsp_transform.sh  host_transform.sh  trans_and_link_on.sh
test_orig/src/: test_device.cl  test_host.cc
uparse/: CMakeLists.txt
uparse/inc/: uparse.h
uparse/src/: uparse.cc
